crates/macros/tests/stage/fail-shader-missing.stderr
error: Missing required resource file: some-shader
 --> tests/stage/fail-shader-missing.rs:7:1
  |
7 | struct BadStage {}
  | ^^^^^^^^^^^^^^^^^^
