crates/macros/tests/stage/fail-shader-missing.rs
// Copyright 2026 The MuTate Contributors
// SPDX-License-Identifier: MIT OR Apache-2.0

use mutate_macros::shader;

#[shader("some-shader")]
struct BadStage {}

fn main() {}
